Fixed navigation on mobile.

--- a/assets/less/classes/header.less
+++ b/assets/less/classes/header.less
@@ -28,6 +28,7 @@
 
         @media (max-width: @site-mobile-width) {
             flex-direction: column;
+            height: 100%;
         }
     }
 
